[package]
name = "mooks_macro"
version = "1.0.3"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
image = "0.23"
screenshots = "0.8.4"
enigo = "0.1.3"
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
winres = "0.1"